--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "gtm-publishing-assistant",
-  "version": "0.0.1",
-  "repository": "XXXXXXXXXXXXXXXX/gtm_publishing_assistant",
+  "name": "gtm-ci",
+  "version": "0.0.2",
+  "repository": "max-ostapenko/gtm-ci",
   "license": "MIT",
   "description": "",
   "engines": {
-    "node": ">=10"
+    "node": ">=14"
   },
   "author": "XXXXXXXXXXXXXXXX",
   "keywords": [
     "google tag manager",
-    "workflow automation"
+    "workflow automation",
+    "continuous integration"
   ],
   "dependencies": {
-    "@slack/webhook": "^5.0.3",
-    "googleapis": "^52.1.0",
-    "msal": "^1.3.3",
-    "yargs-parser": "^18.1.3"
+    "@slack/webhook": "6.0.0",
+    "googleapis": "87.0.0",
+    "yargs-parser": "20.2.9"
   },
   "devDependencies": {
-    "prettier": "2.0.5",
-    "pretty-quick": "^2.0.1"
+    "prettier": "2.4.1",
+    "pretty-quick": "3.1.1"
   },
   "husky": {
     "hooks": {
